--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2019",
+    "types": ["node", "jest", "@testing-library/jest-dom"],
     "lib": [
       "dom",
       "dom.iterable",
